--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -2671,107 +2671,107 @@ stories:
   domain: http://www.grandcoulee.com/
   link: https://www.grandcoulee.com/story/2019/07/10/school/good-manners-earn-raiders-full-stomachs-for-free/11972.html
 images:
-- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-- name: server-cloud1-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-free-woman.jpg
-- name: machine-road-machine-road-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-diego-rivera1.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
-- name: paris-paris-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-bright-sand.jpg
-- name: yosemite-yosemite-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-spagetti-accident.jpg
-- name: white-house-lawn-white-house-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
-- name: old-door-lock-old-door-lock-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-paper.jpg
-- name: subway-subway-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-dali.jpg
-- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
-- name: fence-fence-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
-- name: cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
-- name: blossombar-crafty-painting-file-00-00-50-58.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
-- name: 35562068104_fa20c57575-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
-- name: school-clouds-church-clouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-constitution.jpg
-- name: trucksilo-trucksilo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-bright-sand.jpg
-- name: oldtrain-oldtrain-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-brush.jpg
-- name: old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
-- name: paris-paris-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purp-paper.jpg
-- name: crow_crafty_painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crafty_painting.jpg
-- name: nyc-flag-nycflag-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-creativity.jpg
-- name: ellis-island-ellis-island-room-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
-- name: razorcliff-razorcliff-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
-- name: adam-smith-adam-smith-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
-- name: lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj.jpg
-- name: meadowbutterfly-meadow-butterfly-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-space-pizza.jpg
-- name: walled-garden-walled-garden-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-paper.jpg
-- name: trucksilo-trucksilo-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-rainbow-festival.jpg
-- name: oldcabin-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-pond.jpg
-- name: old-house-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-emily-carr.jpg
-- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-- name: paris-paris-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
-- name: nyc-flag-nycflag-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-kand-two.jpg
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: old-door-lock-old-door-lock-2-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
-- name: server-cloud-server-racks-door-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-ww2-dresden.jpg
-- name: machine-road-machine-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
-- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-- name: downtown-los-angeles-downtown-la-crunch-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crunch-paper.JPG
-- name: amusement-park-amusement-park-2-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-5.jpg
-- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-- name: status-berlin-status-berlin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-emily-carr.jpg
-- name: adam-smith-adam-smith-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sunday.jpg
-- name: catacombs-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-3.jpg
-- name: aws-s3-desertrun-desertrun-still-2560.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-2560.jpg
-- name: abandonedbuildings_purp_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purp_paper.jpg
-- name: fence-mexico-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-dali.jpg
+- name: trucksilo-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
+- name: server-cloud-server-racks-door-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit.jpg
+- name: capital-battle-capitolbattle-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-satan-red.jpg
+- name: fence-fence-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-umberto-bocc.jpg
+- name: beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+- name: abandonedbuildings_plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_plentiful.jpg
+- name: crow_creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_creativity.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+- name: power-lines-power-lines-empty-space-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
+- name: oldcabin-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-three.jpg
+- name: carry-load-carryload-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-two.jpg
+- name: bluelake-colorful-blocks-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-01-17-38.jpg
+- name: powerlines-power-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smooth-ride.jpg
+- name: christianity-christianity-under-construction-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-matrix.jpg
+- name: oldhouse-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
+- name: rockingchair-rockingchair-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-marcel-duchamp.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+- name: christianity-christianity-under-construction-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gan-vogh.jpg
+- name: castle-wall-DSC-0067-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-brush.JPG
+- name: rockingchair-face-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2.jpg
+- name: trucksilo-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
+- name: server-cloud-server-racks-door-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
+- name: amusement-park-amusement-park-2-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-yellow-collage.jpg
+- name: store-on-corner-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
+- name: eduardo-eduardo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-diego-rivera1.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+- name: eduardo-eduardo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-3.jpg
+- name: mosaic-face-mosaic-face-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-5.jpg
+- name: blossombar-dark-soul-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-24-99.jpg
+- name: white-house-whitehouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-marcel-duchamp.jpg
+- name: death-valley-death-valley-national-park-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-emily-carr.jpg
+- name: containership-containership-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-really-hot.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
+- name: sand-hand-sand-hand-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-brush.jpg
+- name: crow-crow-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-smooth-ride.jpg
+- name: udnie-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8312.jpg
+- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
+- name: legal-statue-legalstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
+- name: mosaic-face-mosaic-face-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-post-modern.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
+- name: crow_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_three.jpg
+- name: mosaic-face-mosaic-face-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-dali.jpg
+- name: old-door-lock-old-door-lock-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: art-museum-art-museum-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-umberto-bocc.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
 ---
 Dixie Boys Team A First For Robeson County.&nbsp;Judge Gives Justice For Toddler Harlan Haines.&nbsp;Dolphin Fleet Whale Watch.&nbsp;Tornadoes In Central Montana.&nbsp;Veterans Museum Honors Local Military Service.&nbsp;Veteran Bull Runners Protest Lack Of Thrills In Pamplona.&nbsp;Cricket World Cup Update.&nbsp;Kristen Bell Wanted Veronica Mars Reboot For Her Kids.&nbsp;
